fix: add missing color-text variable for consistency in styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@
 }
 
 $color-bgDark: rgb(41, 41, 41);
+$color-text: rgb(25, 25, 25);
 // $color-highLight: magenta;
 $color-highLight: rgb(61, 207, 182);
 $color-red: rgb(197, 106, 106);
